# agent-knowledge-system

./: .env.example  .gitignore  CLAUDE.md  MCP_SETUP_COMPLETE.md  Makefile  PLAN.md  QUICK_START_MCP.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  setup_mcp.sh  test_end_to_end.py  test_improvements.py  test_jira_integration.py  test_mcp_connection.py  test_multi_repo.py
examples/: README.md  claude_config_example.json  simple_mcp_integration.py
generation/: __init__.py  adr_generator.py  doc_prompts.py  exec_plan_generator.py
graph/: __init__.py  graph_builder.py  graph_loader.py  graph_store.py  schema.py
ingestion/: __init__.py  github_ingestor.py  jira_ingestor.py  mcp_client.py  repo_scanner.py
orchestrator/: pipeline.py  router.py
retrieval/: __init__.py  ranker.py  retrieval_agent.py  traversal.py
src/: __init__.py  cli.py  cli_graph_analysis.py  cli_multi_repo.py  config.py
src/agents/: __init__.py  doc_generator.py  multi_repo_coordinator.py  retrieval.py  router.py  validation.py
src/db/: __init__.py  database.py  models.py
src/gateway/: __init__.py  llm_gateway.py
src/graph/: __init__.py  builders.py  networkx_adapter.py  storage.py  types.py
src/ingestors/: __init__.py  github_ingestor.py  jira_ingestor.py
src/templates/: adr_template.py
src/tests/: __init__.py
src/tests/evaluation/: __init__.py  test_workflow.py
src/tests/graph/: __init__.py  test_graph_validation.py
src/tests/unit/: test_graph.py  test_ingestors.py
src/utils/: logger.py
storage/: __init__.py  db.py  sql_schema.sql
structuring/: __init__.py  entity_extractor.py  feature_builder.py  pr_jira_linker.py
tests/: test_graph.py  test_ingestion.py  test_retrieval.py  test_validation.py
validation/: __init__.py  doc_validator.py  graph_validator.py  schema_validator.py
